syntax = "proto3";

option go_package = "github.com/pastelnetwork/gonode/proto/supernode";

package supernode;

service RegisterArtwork {
    // Session informs primary supernode about its `nodeID` and `sessID` it wants to connect to.
    // The stream is used by the parties to inform each other about the cancellation of the task.
    rpc Session(stream SessionRequest) returns (stream SessionReply);

    // GetSignedDDAndFingerprints request a SNs in returned its SignedDDAndFingerprints for verification
    rpc GetSignedDDAndFingerprints(GetSignedDDAndFingerprintsRequest) returns (GetSignedDDAndFingerprintsReply);

    // SendArtTicketSignature send signature from supernodes mn2/mn3 for given reg NFT session id to primary supernode
    rpc SendArtTicketSignature(SendArtTicketSignatureRequest) returns (SendArtTicketSignatureReply);
}

message SessionRequest {
    string nodeID = 1;
}
message SessionReply {
    string sessID = 1;
}

message GetSignedDDAndFingerprintsRequest {
}

message GetSignedDDAndFingerprintsReply {
    bytes zstd_compressed_fingerprint = 1;
}

message SendArtTicketSignatureRequest {
    string nodeID = 1;
    bytes  signature = 2;
}
message SendArtTicketSignatureReply {
}



