syntax = "proto3";

option go_package = "github.com/pastelnetwork/gonode/proto/walletnode";

package walletnode;

import "register_artwork.proto";

service ExternalDupeDetection {
    // Session informs the supernode its position (primary/secondary).
    // Returns `SessID` that are used by all other rpc methods to identify the task on the supernode. By sending `sessID` in the Metadata.
    // The stream is used by the parties to inform each other about the cancellation of the task.
    rpc Session(stream SessionRequest) returns (stream SessionReply);

    // AcceptedNodes returns peers of the secondary supernodes connected to it.
    rpc AcceptedNodes(AcceptedNodesRequest) returns (AcceptedNodesReply);

    // ConnectTo requests to connect to the primary supernode.
    rpc ConnectTo(ConnectToRequest) returns (ConnectToReply);

    // ProbeImage uploads the resampled image compute and return a fingerpirnt.
    rpc ProbeImage(stream ProbeImageRequest) returns (ProbeImageReply);

    // SendSignedEDDTicket sends a signed art-ticket to the supernode.
    rpc SendSignedEDDTicket(SendSignedEDDTicketRequest) returns (SendSignedEDDTicketReply);

    // SendPreBurnedFeeEDDTxid sends tx_id of 10% burnt transaction fee to the supernode.
    rpc SendPreBurnedFeeEDDTxid(SendPreBurnedFeeEDDTxidRequest) returns (SendPreBurnedFeeEDDTxidReply);

    // SendTicket sends a ticket to the supernode.
    rpc SendTicket(SendTicketRequest) returns (SendTicketReply);

    // Upload the image after pq signature is appended along with its thumbnail coordinates
    rpc UploadImage(stream UploadImageRequest) returns (UploadImageReply);
}

message SendSignedEDDTicketRequest {
    bytes edd_ticket = 1;
    string createtor_pastel_id = 2;
    bytes creator_signature = 3;
    string key1 = 4;
    string key2 = 5;
    EncoderParameters encode_parameters = 6;
    map<string, bytes> encode_files = 7;
}

message SendSignedEDDTicketReply {
    int64 registration_fee = 1;
}

message SendPreBurnedFeeEDDTxidRequest {
    string txid = 1;
}
message SendPreBurnedFeeEDDTxidReply {
    string edd_reg_txid = 1;
}
